--- a/data/nginx.conf
+++ b/data/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     # Usamos $host para ser más dinámicos y un placeholder para la IP real del servidor.
+    # El script Bash reemplazará {{SERVER_IP_PLACEHOLDER}} con la IP pública (si existe) o privada.
     server_name $host {{SERVER_IP_PLACEHOLDER}} localhost;
 
     root /srv/www/wordpress;
@@ -48,3 +49,4 @@ server {
         deny all;
     }
 }
+
